--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>TS CURSO</h1>
-    <script src="script.js"></script>
+   <!--  <script src="script.js"></script> -->
+    <script src="typosDeDatos.js"></script>
+
 
 </body>
 </html>
