--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>TS CURSO</h1>
-   <!--  <script src="script.js"></script> -->
-    <script src="typosDeDatos.js"></script>
-
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>TS CURSO</title>
+  </head>
+  <body>
+    <!-- agregar background a toda -->
+  <!--   <script src="script.js"></script> -->
+    <!--     <script src="typosDeDatos.js"></script> -->
+    <script src="sorteo.js"></script> 
+  </body>
 </html>
